# NanoWatchdog

./: .gitignore  INSTALL  Makefile.am  NEWS  README  README.md  TODO  configure.ac
Arduino/: Makefile.am
Arduino/NanoWatchdog/: Makefile.am  NanoWatchdog.ino
Arduino/lib/: Makefile.am  NanoWatchdog.cpp  NanoWatchdog.h  nwEEPROM.cpp  nwEEPROM.h  nwEvent.cpp  nwEvent.h  nwReason.cpp  nwReason.h
doc/: CommunicationFlows.odg  Makefile.am  Sheets.ods
etc/: Makefile.am  nanowatchdog.conf  watchdog.conf
etc/init.d/: Makefile.am  nanowatchdog.in
etc/systemd/: Makefile.am  nanowatchdog.service.in
etc/systemd/system/: Makefile.am  nanowatchdog.service  nanowatchdog.service.in
etc/udev/: Makefile.am
etc/udev/rules.d/: 50-nanowatchdog.rules  Makefile.am
maintainer/: Makefile.am  make_install_txz.sh
pcb/: Makefile.am  pcb_v4.odg  pcb_v5.odg  pcb_v6.odg  pcb_v7.odg
src/: Makefile.am  nw-client.pl  nw-daemon.pl
src/client/: Makefile.am  nw-client.pl
src/daemon/: Makefile.am  nw-daemon.pl
